--- a/amopt/misc/longstaff-schwartz/compare_longstaff.ipynb
+++ b/amopt/misc/longstaff-schwartz/compare_longstaff.ipynb
@@ -23,20 +23,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "c9fdc210",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2055649913.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mimport .models.longstaff_schwartz as lsm\u001b[39m\n           ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import math\n",
     "import pandas as pd\n",
-    "import math, pandas as pd, sys, pathlib, lsm\n",
+    "import math, pandas as pd, sys, pathlib\n",
+    "import models.longstaff_schwartz as lsm\n",
     "\n",
     "# upewnij się, że lsm.py jest w tym samym katalogu\n",
     "import importlib, sys, pathlib\n",
     "sys.path.append(str(pathlib.Path.cwd()))\n",
-    "import lsm\n",
     "import numpy as np\n",
     "np.random.seed(16)\n",
     "\n",
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "f6b1e70d",
    "metadata": {},
    "outputs": [],
@@ -86,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "dde7e780",
    "metadata": {},
    "outputs": [],
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "1b4b6744",
    "metadata": {},
    "outputs": [
@@ -150,9 +159,9 @@
        "      <td>0.2</td>\n",
        "      <td>1</td>\n",
        "      <td>4.478</td>\n",
-       "      <td>4.453</td>\n",
-       "      <td>-0.025</td>\n",
-       "      <td>0.56</td>\n",
+       "      <td>3.990</td>\n",
+       "      <td>-0.488</td>\n",
+       "      <td>10.89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -160,9 +169,9 @@
        "      <td>0.2</td>\n",
        "      <td>2</td>\n",
        "      <td>4.840</td>\n",
-       "      <td>4.812</td>\n",
-       "      <td>-0.028</td>\n",
-       "      <td>0.59</td>\n",
+       "      <td>3.990</td>\n",
+       "      <td>-0.850</td>\n",
+       "      <td>17.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -170,9 +179,9 @@
        "      <td>0.4</td>\n",
        "      <td>1</td>\n",
        "      <td>7.101</td>\n",
-       "      <td>7.083</td>\n",
-       "      <td>-0.018</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>3.990</td>\n",
+       "      <td>-3.111</td>\n",
+       "      <td>43.80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -180,9 +189,9 @@
        "      <td>0.4</td>\n",
        "      <td>2</td>\n",
        "      <td>8.508</td>\n",
-       "      <td>8.453</td>\n",
-       "      <td>-0.055</td>\n",
-       "      <td>0.65</td>\n",
+       "      <td>3.990</td>\n",
+       "      <td>-4.518</td>\n",
+       "      <td>53.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -190,9 +199,9 @@
        "      <td>0.2</td>\n",
        "      <td>1</td>\n",
        "      <td>3.250</td>\n",
-       "      <td>3.232</td>\n",
-       "      <td>-0.018</td>\n",
-       "      <td>0.55</td>\n",
+       "      <td>1.995</td>\n",
+       "      <td>-1.255</td>\n",
+       "      <td>38.61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -200,9 +209,9 @@
        "      <td>0.2</td>\n",
        "      <td>2</td>\n",
        "      <td>3.745</td>\n",
-       "      <td>3.714</td>\n",
-       "      <td>-0.031</td>\n",
-       "      <td>0.82</td>\n",
+       "      <td>1.995</td>\n",
+       "      <td>-1.750</td>\n",
+       "      <td>46.72</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -210,9 +219,9 @@
        "      <td>0.4</td>\n",
        "      <td>1</td>\n",
        "      <td>6.148</td>\n",
-       "      <td>6.128</td>\n",
-       "      <td>-0.020</td>\n",
-       "      <td>0.33</td>\n",
+       "      <td>1.995</td>\n",
+       "      <td>-4.153</td>\n",
+       "      <td>67.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -220,9 +229,9 @@
        "      <td>0.4</td>\n",
        "      <td>2</td>\n",
        "      <td>7.670</td>\n",
-       "      <td>7.614</td>\n",
-       "      <td>-0.056</td>\n",
-       "      <td>0.73</td>\n",
+       "      <td>1.995</td>\n",
+       "      <td>-5.675</td>\n",
+       "      <td>73.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -230,9 +239,9 @@
        "      <td>0.2</td>\n",
        "      <td>1</td>\n",
        "      <td>2.314</td>\n",
-       "      <td>2.299</td>\n",
-       "      <td>-0.015</td>\n",
-       "      <td>0.64</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-2.314</td>\n",
+       "      <td>100.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -240,9 +249,9 @@
        "      <td>0.2</td>\n",
        "      <td>2</td>\n",
        "      <td>2.885</td>\n",
-       "      <td>2.855</td>\n",
-       "      <td>-0.030</td>\n",
-       "      <td>1.03</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-2.885</td>\n",
+       "      <td>100.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -250,9 +259,9 @@
        "      <td>0.4</td>\n",
        "      <td>1</td>\n",
        "      <td>5.312</td>\n",
-       "      <td>5.286</td>\n",
-       "      <td>-0.026</td>\n",
-       "      <td>0.50</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-5.312</td>\n",
+       "      <td>100.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -260,9 +269,9 @@
        "      <td>0.4</td>\n",
        "      <td>2</td>\n",
        "      <td>6.920</td>\n",
-       "      <td>6.869</td>\n",
-       "      <td>-0.051</td>\n",
-       "      <td>0.74</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-6.920</td>\n",
+       "      <td>100.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -270,27 +279,29 @@
       ],
       "text/plain": [
        "    S0  sigma  T  Paper   Ours  AbsErr  RelErrPct\n",
-       "0   36    0.2  1  4.478  4.453  -0.025       0.56\n",
-       "1   36    0.2  2  4.840  4.812  -0.028       0.59\n",
-       "2   36    0.4  1  7.101  7.083  -0.018       0.25\n",
-       "3   36    0.4  2  8.508  8.453  -0.055       0.65\n",
-       "4   38    0.2  1  3.250  3.232  -0.018       0.55\n",
-       "5   38    0.2  2  3.745  3.714  -0.031       0.82\n",
-       "6   38    0.4  1  6.148  6.128  -0.020       0.33\n",
-       "7   38    0.4  2  7.670  7.614  -0.056       0.73\n",
-       "8   40    0.2  1  2.314  2.299  -0.015       0.64\n",
-       "9   40    0.2  2  2.885  2.855  -0.030       1.03\n",
-       "10  40    0.4  1  5.312  5.286  -0.026       0.50\n",
-       "11  40    0.4  2  6.920  6.869  -0.051       0.74"
+       "0   36    0.2  1  4.478  3.990  -0.488      10.89\n",
+       "1   36    0.2  2  4.840  3.990  -0.850      17.55\n",
+       "2   36    0.4  1  7.101  3.990  -3.111      43.80\n",
+       "3   36    0.4  2  8.508  3.990  -4.518      53.10\n",
+       "4   38    0.2  1  3.250  1.995  -1.255      38.61\n",
+       "5   38    0.2  2  3.745  1.995  -1.750      46.72\n",
+       "6   38    0.4  1  6.148  1.995  -4.153      67.55\n",
+       "7   38    0.4  2  7.670  1.995  -5.675      73.99\n",
+       "8   40    0.2  1  2.314  0.000  -2.314     100.00\n",
+       "9   40    0.2  2  2.885  0.000  -2.885     100.00\n",
+       "10  40    0.4  1  5.312  0.000  -5.312     100.00\n",
+       "11  40    0.4  2  6.920  0.000  -6.920     100.00"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
+    "import sys\n",
+    "sys.path.append('../../..')\n",
+    "from amopt.models import longstaff_schwartz as lsm\n",
     "rows = []\n",
     "for S0, sigma, T, ref_val in reference:\n",
     "    model_val = lsm.lsm_price_multi(\n",
@@ -942,7 +953,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -956,7 +967,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
