--- a/example.ipynb
+++ b/example.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from amopt.pricing.pricing import AmericanOptionPricer"
+    "from amopt.pricing.pricing import AmericanOptionPricer\n",
+    "from amopt.models.longstaff_schwartz import payoff_call"
    ]
   },
   {
@@ -18,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pricer = AmericanOptionPricer([10], 10, 0.05, [0.1], 1, [0,0.5,1], 100, [[1]], [0.02])"
+    "pricer = AmericanOptionPricer([10], 10, 0.05, [0.1], 1, [0,0.25,0.5,0.75,1], 50, [[1]], [0.02])"
    ]
   },
   {
@@ -39,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pricer.set_payoff_function(call_at_8_payoff)"
+    "pricer.set_payoff_function(payoff_call(8))"
    ]
   },
   {
@@ -51,7 +52,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.54713486])"
+       "np.float64(0.5471348577911428)"
       ]
      },
      "execution_count": 5,
@@ -70,17 +71,24 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "too many indices for array: array is 2-dimensional, but 3 were indexed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mpricer\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlongstaff_schwartz\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32md:\\Users\\filip\\Studia\\Sem10\\IF2\\Projekt_2\\IF2_american_options\\amopt\\pricing\\pricing.py:167\u001b[39m, in \u001b[36mAmericanOptionPricer.longstaff_schwartz\u001b[39m\u001b[34m(self, basis_fn, num_paths)\u001b[39m\n\u001b[32m    151\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mlongstaff_schwartz\u001b[39m(\u001b[38;5;28mself\u001b[39m, basis_fn=\u001b[38;5;28;01mNone\u001b[39;00m, num_paths=\u001b[32m10000\u001b[39m):\n\u001b[32m    152\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    153\u001b[39m \u001b[33;03m    Price an American option using the Longstaff-Schwartz method.\u001b[39;00m\n\u001b[32m    154\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    165\u001b[39m \u001b[33;03m        The price of the American option.\u001b[39;00m\n\u001b[32m    166\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m167\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mlsm_price_multi\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    168\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mspot_price\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    169\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mrisk_free_rate\u001b[49m\u001b[43m \u001b[49m\u001b[43m-\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mdividend_yield\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    170\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mvolatility\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    171\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcorr\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    172\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mtime_to_maturity\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    173\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mexecution_times\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    174\u001b[39m \u001b[43m        \u001b[49m\u001b[43mnum_paths\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    175\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mpayoff_func\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    176\u001b[39m \u001b[43m        \u001b[49m\u001b[43mbasis_fn\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    177\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mseed\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    178\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m    179\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32md:\\Users\\filip\\Studia\\Sem10\\IF2\\Projekt_2\\IF2_american_options\\amopt\\models\\longstaff_schwartz.py:452\u001b[39m, in \u001b[36mlsm_price_multi\u001b[39m\u001b[34m(S0, r, sigma, corr, T, M, N, payoff_fn, basis_fn, seed, antithetic)\u001b[39m\n\u001b[32m    449\u001b[39m itm = intrinsic > \u001b[32m0\u001b[39m  \u001b[38;5;66;03m# boolean mask (N,)\u001b[39;00m\n\u001b[32m    451\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m np.any(itm):\n\u001b[32m--> \u001b[39m\u001b[32m452\u001b[39m     S_itm = \u001b[43mS_t\u001b[49m\u001b[43m[\u001b[49m\u001b[43mitm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m  \u001b[38;5;66;03m# only in‐the‐money paths\u001b[39;00m\n\u001b[32m    454\u001b[39m     \u001b[38;5;66;03m# build regression matrix via provided basis function\u001b[39;00m\n\u001b[32m    455\u001b[39m     X = basis_fn(S_itm)  \u001b[38;5;66;03m# shape (n_itm, n_basis)\u001b[39;00m\n",
-      "\u001b[31mIndexError\u001b[39m: too many indices for array: array is 2-dimensional, but 3 were indexed"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50 1\n",
+      "50 1\n",
+      "50 1\n",
+      "50 1\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(2.5225441151750765)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -89,25 +97,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "786ee821",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50, 6, 1)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pricer.asset_paths.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "8944206b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "price_option() got an unexpected keyword argument 'num_paths'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mpricer\u001b[49m\u001b[43m.\u001b[49m\u001b[43mstochastic_mesh\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m10\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32md:\\Users\\filip\\Studia\\Sem10\\IF2\\Projekt_2\\IF2_american_options\\amopt\\pricing\\pricing.py:138\u001b[39m, in \u001b[36mAmericanOptionPricer.stochastic_mesh\u001b[39m\u001b[34m(self, num_paths)\u001b[39m\n\u001b[32m    124\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mstochastic_mesh\u001b[39m(\u001b[38;5;28mself\u001b[39m, num_paths=\u001b[32m10000\u001b[39m):\n\u001b[32m    125\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    126\u001b[39m \u001b[33;03m    Price an American option using the stochastic mesh method.\u001b[39;00m\n\u001b[32m    127\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    136\u001b[39m \u001b[33;03m        The price of the American option.\u001b[39;00m\n\u001b[32m    137\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m138\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mprice_option\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    139\u001b[39m \u001b[43m        \u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtranspose\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43masset_paths\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    140\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mpayoff_func\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    141\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mspot_price\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    142\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mrisk_free_rate\u001b[49m\u001b[43m \u001b[49m\u001b[43m-\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mdividend_yield\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    143\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mvolatility\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    144\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mrisk_free_rate\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    145\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mdividend_yield\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    146\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mtime_to_maturity\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    147\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mtime_to_maturity\u001b[49m\u001b[43m \u001b[49m\u001b[43m/\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mexecution_times\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    148\u001b[39m \u001b[43m        \u001b[49m\u001b[43mnum_paths\u001b[49m\u001b[43m=\u001b[49m\u001b[43mnum_paths\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    149\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: price_option() got an unexpected keyword argument 'num_paths'"
-     ]
+     "data": {
+      "text/plain": [
+       "(np.float64(2.152323272381976), np.float64(2.0822727998921167))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "pricer.set_payoff_function(call_at_8_payoff)\n",
     "pricer.stochastic_mesh(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6350012a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'smm_mesh_price': np.float64(2.152323272381976),\n",
+       " 'smm_path_price': np.float64(2.0822727998921167),\n",
+       " 'lsm_price': np.float64(2.5225441151750765),\n",
+       " 'bjs_price': array([0.54713486]),\n",
+       " 'smm_time': 1.1337602138519287,\n",
+       " 'lsm_time': 0.001990079879760742,\n",
+       " 'bjs_time': 0.0}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pricer.full_data()"
    ]
   }
  ],
