--- a/example.ipynb
+++ b/example.ipynb
@@ -52,7 +52,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(0.5471348577911428)"
+       "array([0.54713486])"
       ]
      },
      "execution_count": 5,
@@ -83,7 +83,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(2.5225441151750765)"
+       "np.float64(2.388453778196402)"
       ]
      },
      "execution_count": 6,
@@ -125,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "(np.float64(2.152323272381976), np.float64(2.0822727998921167))"
+       "(np.float64(1.9211257913529334), np.float64(2.0845628097068416))"
       ]
      },
      "execution_count": 8,
@@ -147,12 +147,12 @@
     {
      "data": {
       "text/plain": [
-       "{'smm_mesh_price': np.float64(2.152323272381976),\n",
-       " 'smm_path_price': np.float64(2.0822727998921167),\n",
-       " 'lsm_price': np.float64(2.5225441151750765),\n",
+       "{'smm_mesh_price': np.float64(2.0845628097068416),\n",
+       " 'smm_path_price': np.float64(1.9211257913529334),\n",
+       " 'lsm_price': np.float64(2.388453778196402),\n",
        " 'bjs_price': array([0.54713486]),\n",
-       " 'smm_time': 1.1337602138519287,\n",
-       " 'lsm_time': 0.001990079879760742,\n",
+       " 'smm_time': 1.1558356285095215,\n",
+       " 'lsm_time': 0.0009970664978027344,\n",
        " 'bjs_time': 0.0}"
       ]
      },
