--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "72a63295",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from library.models.stochastic_mesh import simulate_gbm_paths, likelihood_weights, mesh_estimator, path_estimator, price_option\n",
-    "from library.models.longstaff_schwartz import simulate_paths_gbm"
+    "from amopt.models.stochastic_mesh import simulate_gbm_paths, likelihood_weights, mesh_estimator, path_estimator, price_option\n",
+    "from amopt.models.longstaff_schwartz import simulate_paths_gbm"
    ]
   },
   {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4fe3368e",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "074bfc4e",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
        "         11.25473972]]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a4707d0a",
    "metadata": {},
    "outputs": [],
@@ -108,37 +108,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b7cbaedb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[10.        , 10.58837296, 10.18498665, 11.88146492,\n",
-       "         11.27185549],\n",
-       "        [10.        , 10.74944308, 11.09561709, 11.2548933 ,\n",
-       "         11.32432732],\n",
-       "        [10.        ,  9.84210642,  8.34512864,  7.96247356,\n",
-       "          8.71019511],\n",
-       "        [10.        , 11.7989008 , 10.74266571,  9.64677734,\n",
-       "          9.92453788],\n",
-       "        [10.        ,  9.61320481,  8.84484892,  8.39193712,\n",
-       "          7.40349935]],\n",
+       "array([[[10.        , 12.        ],\n",
+       "        [10.58837296, 11.84980145],\n",
+       "        [10.18498665, 11.23217461],\n",
+       "        [11.88146492, 10.97091692],\n",
+       "        [11.27185549, 13.89418113]],\n",
        "\n",
-       "       [[12.        , 11.84980145, 11.23217461, 10.97091692,\n",
-       "         13.89418113],\n",
-       "        [12.        , 14.58469778, 11.53632037,  9.6996939 ,\n",
-       "          8.53835155],\n",
-       "        [12.        , 11.70863999, 10.96522157, 11.17055628,\n",
-       "          9.63462573],\n",
-       "        [12.        , 13.27023412, 13.86672253, 14.60175402,\n",
-       "         11.48303116],\n",
-       "        [12.        , 12.90241051, 10.86518556, 10.5253799 ,\n",
-       "         10.83828343]]])"
+       "       [[10.        , 12.        ],\n",
+       "        [10.74944308, 14.58469778],\n",
+       "        [11.09561709, 11.53632037],\n",
+       "        [11.2548933 ,  9.6996939 ],\n",
+       "        [11.32432732,  8.53835155]],\n",
+       "\n",
+       "       [[10.        , 12.        ],\n",
+       "        [ 9.84210642, 11.70863999],\n",
+       "        [ 8.34512864, 10.96522157],\n",
+       "        [ 7.96247356, 11.17055628],\n",
+       "        [ 8.71019511,  9.63462573]],\n",
+       "\n",
+       "       [[10.        , 12.        ],\n",
+       "        [11.7989008 , 13.27023412],\n",
+       "        [10.74266571, 13.86672253],\n",
+       "        [ 9.64677734, 14.60175402],\n",
+       "        [ 9.92453788, 11.48303116]],\n",
+       "\n",
+       "       [[10.        , 12.        ],\n",
+       "        [ 9.61320481, 12.90241051],\n",
+       "        [ 8.84484892, 10.86518556],\n",
+       "        [ 8.39193712, 10.5253799 ],\n",
+       "        [ 7.40349935, 10.83828343]]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,17 +159,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "ca51d430",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(np.float64(0.09527650844105016), np.float64(0.12491345031739653))"
+       "(0.28023769878128224, 0.0258344044679705)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
